opimisation and fixes and all that kinda stuff